k8s/k8s/vauban-blog/production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vauban-blog
  labels:
    app.kubernetes.io/name: vauban-blog
    app.kubernetes.io/part-of: vauban-blog
    environment: production
    istio-injection: disabled
